<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/scrollView1"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".DisplayContact" >

  <RelativeLayout 
    android:layout_width="match_parent" android:layout_height="370dp" android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
      android:id="@+id/labelProductModelNo"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextProductModelNo"
      android:layout_alignParentLeft="true"
      android:layout_gravity="center"
      android:drawableLeft="@drawable/letter_m"
      android:singleLine="true" />
    
    <EditText
      android:id="@+id/editTextProductModelNo"
      android:hint="@string/productModelNo"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginLeft="50dp"
      android:layout_marginTop="5dp"
      android:ems="10"
      android:inputType="text" />

    <TextView
      android:id="@+id/labelProductPrice"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextProductPrice"
      android:layout_alignParentLeft="true"
      android:layout_gravity="center"
      android:drawableLeft="@drawable/rupees_icon1"
      android:singleLine="true" />

    <EditText
      android:id="@+id/editTextProductPrice"
      android:hint="@string/productPrice"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/editTextProductModelNo"
      android:layout_below="@+id/editTextProductModelNo"
      android:layout_marginTop="10dp"
      android:ems="10"
      android:inputType="number" />

    <TextView
      android:id="@+id/labelSellingDate"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/editTextSellingDate"
      android:layout_alignParentLeft="true"
      android:layout_gravity="center"
      android:drawableLeft="@drawable/calendar_icon"
      android:singleLine="true" />

    <EditText
      android:id="@+id/editTextSellingDate"
      android:hint="@string/sellingDate"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/editTextProductPrice"
      android:layout_below="@+id/editTextProductPrice"
      android:layout_marginTop="10dp"
      android:clickable="true"
      android:ems="10"
      android:onClick="setDate"
      android:textSize="20sp" />

    <Button
      android:id="@+id/btnSave"
      android:text="@string/save_model"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@drawable/button"
      android:layout_below="@+id/editTextProductPrice"
      android:layout_marginTop="20dp"
      android:textSize="@dimen/btn_font_size"
      android:textColor="@color/white"
      android:onClick="insertUpdateCustomer" />

  </RelativeLayout>

</ScrollView>