<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/grid_color_selector" >

    <TextView android:id="@+id/labelName"
      android:layout_width="fill_parent"
      android:layout_height="match_parent"
      android:layout_alignParentLeft="true"
      android:layout_marginTop="10dp"
      android:layout_gravity="center"
      android:drawableLeft="@drawable/customer_45"
      android:singleLine="true" />

    <TextView
        android:id="@+id/labelSearchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="5dp"
        android:layout_alignBottom="@+id/displayName"
        android:text="@string/label_display_name" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/labelSearchName" />

    <TextView
        android:id="@+id/labelDisplayAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_alignBottom="@+id/displayAddress"
        android:layout_below="@+id/labelSearchName"
        android:text="@string/label_display_address" />

    <TextView
        android:id="@+id/displayAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayName"
        android:layout_toRightOf="@+id/labelDisplayAddress" />

    <TextView
        android:id="@+id/labelDisplayLastService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="5dp"
        android:layout_alignBottom="@+id/displayMobile"
        android:layout_below="@+id/labelDisplayAddress"
        android:text="@string/label_display_mobile" />

    <TextView
        android:id="@+id/displayMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/displayAddress"
        android:layout_toRightOf="@+id/labelDisplayLastService" />

</RelativeLayout>